--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,11 @@
-certifi
-charset-normalizer       3.4.4
-click                    8.3.1
-filelock                 3.20.1
-fire                     0.7.1
-fsspec                   2025.12.0
-idna                     3.11
-Jinja2                   3.1.6
-MarkupSafe               3.0.3
-mpmath                   1.3.0
-networkx                 3.6.1
-numpy                    2.4.0
-nvidia-cublas-cu12       12.8.4.1
-nvidia-cuda-cupti-cu12   12.8.90
-nvidia-cuda-nvrtc-cu12   12.8.93
-nvidia-cuda-runtime-cu12 12.8.90
-nvidia-cudnn-cu12        9.10.2.21
-nvidia-cufft-cu12        11.3.3.83
-nvidia-cufile-cu12       1.13.1.3
-nvidia-curand-cu12       10.3.9.90
-nvidia-cusolver-cu12     11.7.3.90
-nvidia-cusparse-cu12     12.5.8.93
-nvidia-cusparselt-cu12   0.7.1
-nvidia-nccl-cu12         2.27.5
-nvidia-nvjitlink-cu12    12.8.93
-nvidia-nvshmem-cu12      3.3.20
-nvidia-nvtx-cu12         12.8.90
-opencv-python            4.11.0.86
-pillow                   12.0.0
-pip                      25.2
-pybboxes                 0.1.6
-PyYAML                   6.0.3
-requests                 2.32.5
-sahi                     0.11.36
-setuptools               80.9.0
-shapely                  2.1.2
-sympy                    1.14.0
-termcolor                3.2.0
-terminaltables           3.1.10
-torch                    2.9.1
-tqdm                     4.67.1
-triton                   3.5.1
-typing_extensions        4.15.0
-urllib3                  2.6.2
+opencv-python<=4.11.0.86
+shapely>=2.0.0
+tqdm>=4.48.2
+pybboxes==0.1.6
+pillow>=8.2.0
+pyyaml
+fire
+terminaltables
+requests
+click
+torch>=2.4.1
