--- a/.gitignore
+++ b/.gitignore
@@ -167,7 +167,7 @@ cython_debug/
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
-tests/data
+!.elasticbeanstalk/*.global.yml
 
 .archive
 .python-version
